// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> Snapshot renders correctly for logged in users 1`] = `
<nav
  className="navbar navbar-dark primary-color"
  id="header"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="text-hide d-block"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Cueframe"
        className="d-block d-md-none"
        src="logo-small.svg"
      />
      <img
        alt="Cueframe"
        className="d-none d-md-block"
        src="logo-large.svg"
      />
      Cueframe
    </a>
  </div>
  <ul
    className="navbar-nav ml-auto"
  >
    <li
      className="nav-item"
    >
      <a
        aria-current={null}
        className="nav-link Ripple-parent"
        href="/"
        onClick={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
      >
        Logout
        <div
          className="Ripple "
          style={
            Object {
              "height": "0px",
              "left": "0px",
              "top": "0px",
              "width": "0px",
            }
          }
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<Header/> Snapshot renders correctly for logged out users 1`] = `
<nav
  className="navbar navbar-dark primary-color"
  id="header"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="text-hide d-block"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Cueframe"
        className="d-block d-md-none"
        src="logo-small.svg"
      />
      <img
        alt="Cueframe"
        className="d-none d-md-block"
        src="logo-large.svg"
      />
      Cueframe
    </a>
  </div>
  <ul
    className="navbar-nav ml-auto"
  >
    <li
      className="nav-item"
    >
      <a
        aria-current={null}
        className="nav-link Ripple-parent"
        href="/login"
        onClick={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
      >
        Login
        <div
          className="Ripple "
          style={
            Object {
              "height": "0px",
              "left": "0px",
              "top": "0px",
              "width": "0px",
            }
          }
        />
      </a>
    </li>
  </ul>
</nav>
`;
